# znake

./: README.md  znake.cabal
src/: Main.hs
